--- a/PracticeCode/1-Introducing-Grid-Layout/3-Defining a Grid/start/css/grid.css
+++ b/PracticeCode/1-Introducing-Grid-Layout/3-Defining a Grid/start/css/grid.css
@@ -2,5 +2,13 @@
    Grid Layout
 ======================================== */
 
-
+.grid {
+   max-width: 800px;
+   display: grid;
+   grid-template-columns: 200px auto 200px;
+   grid-template-rows: 100px 200px;
+   /* grid-column-gap: 20px;
+   grid-row-gap: 15px; */
+   grid-gap: 20px;
+}
 
