--- a/PracticeCode/3-Going-Further-With-Grid-Layout/4-Placing Elements Using Grid Template Areas/start/css/grid.css
+++ b/PracticeCode/3-Going-Further-With-Grid-Layout/4-Placing Elements Using Grid Template Areas/start/css/grid.css
@@ -5,25 +5,38 @@
 .container {
   height: 100vh;
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 100px minmax(200px, 1fr) 100px 100px; 
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 100px minmax(200px, 1fr) 100px; 
   grid-gap: 10px;
+  grid-template-areas: 
+  "nav header header"
+  "main main aside"
+  "footer footer footer";
 }
 
 header {
-  grid-column: 1 / -1;
+  /* grid-column: 1 / -1; */
+  grid-area: header;
+}
+
+nav {
+  /* grid-row: 2 / 3; */
+  grid-area: nav;
 }
 
 main {
-  grid-row: 2 / 3;
+  /* grid-row: 2 / 3; */
+  grid-area: main;
 }
 
 aside {
-  grid-row: 2 / -1;
+  /* grid-row: 2 / -1; */
+  grid-area: aside;
 }
 
 footer {
-  grid-row: -3 / -1;
+  /* grid-row: -3 / -1; */
+  grid-area: footer;
 }
 
 
