--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-main {
+body {
     margin-left: 20%;
     margin-right: 20%;
 }
@@ -8,18 +8,23 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 65px;
-    /* column-gap: 35px; */
+    column-gap: 65px;
+    padding-bottom: 100px;
+
+}
+
+.center {
+    place-items: center;
 }
 
 #search {
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 50px;
-    justify-content: center;
     text-align: center;
-    width: 300px;
+    min-width: 150px;
+    width: 80%;
     height: 40px;
-    vertical-align: center;
-    border: 1px solid red;
+    margin-left: 100px
 }
 
 img {
